// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Logo component render with props 1`] = `
<p
  className="test"
>
  <a
    href="/"
    title="Films"
  >
    Films
  </a>
</p>
`;

exports[`render Logo component render without props 1`] = `
<p
  className="primary"
>
  <a
    href="/"
    title="Films"
  >
    Films
  </a>
</p>
`;
